--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 baseURL: "https://www.horaciomorenom.me/" 
 title: Horacio Moreno Montañes
-paginate: 20
+pagination:
+  pagerSize: 10
 theme: PaperMod
 
 
@@ -72,7 +73,7 @@ params:
         - name: CV
           url: cv.pdf
         - name: Email
-          url: mailto:hmorenom@umich.com
+          url: mailto:hmorenom@umich.edu
         - name: YouTube
           url: https://www.youtube.com/@HoracioMorenoMontanes
         - name: GitHub
